[gd_scene load_steps=7 format=3 uid="uid://dv2y18ye8j7o0"]

[ext_resource type="Script" uid="uid://btxfctnmgpykd" path="res://scenes/main_menu_scene.gd" id="1_1foie"]
[ext_resource type="PackedScene" uid="uid://cik30de5gaaah" path="res://scenes/ingame_scene.tscn" id="2_nl5i6"]
[ext_resource type="PackedScene" uid="uid://g4qhvbvdm62w" path="res://scenes/game_settings_scene.tscn" id="3_dgs4d"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="3_kf1us"]
[ext_resource type="PackedScene" uid="uid://b4blrdjthcxnn" path="res://ui/components/game_logo.tscn" id="4_fnufg"]
[ext_resource type="AudioStream" uid="uid://bxopboy8aq5mo" path="res://music/FGJ25_BlockPartyTrack01_V1_loop.mp3" id="6_6ad1t"]

[node name="MainMenuScene" type="Node2D"]
script = ExtResource("1_1foie")
game_scene = ExtResource("2_nl5i6")
settings_scene = ExtResource("3_dgs4d")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.501961, 0.27451, 0.27451, 1)

[node name="GameLogo" parent="UI" instance=ExtResource("4_fnufg")]
modulate = Color(0, 0, 0, 0.7)
offset_left = -16.0
offset_top = 24.0
offset_right = 904.0
offset_bottom = 284.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameLogo-FG" parent="UI" instance=ExtResource("4_fnufg")]
offset_left = -8.0
offset_top = 40.0
offset_right = 912.0
offset_bottom = 300.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -120.0
offset_right = 24.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -52.0
offset_right = 92.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="ContinueButton" type="Button" parent="UI/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "continue"

[node name="NewGameButton" type="Button" parent="UI/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "new_game"

[node name="SettingsButton" type="Button" parent="UI/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "settings"

[node name="ExitButton" type="Button" parent="UI/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "leave_game"

[node name="Label" type="RichTextLabel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 112.0
offset_right = 348.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "A tiny tricky Puzzle Game made for
[font size=64]Furry Game Jam #1[/font]

code:       3 Tigers in a Trenchcoat
music:      CoVahr of AudioCreatures
graphics:  someone404 and Mobropro

[font size=24]Sound effects from Zapsplat.com
Additional Graphics by Kenney.nl
Pixel Fonts by Eeve Somepx[/font]"

[node name="FadeOverlay" parent="UI" instance=ExtResource("3_kf1us")]
unique_name_in_owner = true
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6ad1t")
autoplay = true
bus = &"Music"
